<resources>
    <string name="app_name">GreenFlag</string>
    <string name="create_account">Create an account</string>
    <string name="create_account_text">GreenFlag customers can create an account to access</string>
    <string name="car_health">Car health updates</string>
    <string name="request">Request a rescue online</string>
    <string name="policy_info">Policy information</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="pass_req">Your Password should have a minimum of 8 characters and contain at
    least one number, one uppercase and one lower case letter.  You can use special characters.</string>
    <string name="next">Next</string>
    <string name="title">Create an account</string>
    <string name="see_criteria_below">See criteria below</string>
    <string name="example_email">example@example.com</string>
    <string name="password_2_hint">Enter password again</string>
</resources>