<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/logo_green_flag" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="359dp"
        android:layout_height="67dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museo_sans_500"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="274dp"
        android:layout_height="64dp"
        android:fontFamily="@font/museo_sans_500"
        android:text="@string/create_account_text"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_car_health"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title"
        app:layout_constraintVertical_bias="0.892" />

    <TextView
        android:id="@+id/tv_policy_info"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="164dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/policy_info"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/iv_check3" />

    <ImageView
        android:id="@+id/iv_check2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="28dp"
        android:background="#FD000000"
        app:layout_constraintBottom_toTopOf="@+id/iv_check3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/tv_car_health"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/car_health"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_request_rescue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/iv_check1" />

    <TextView
        android:id="@+id/tv_request_rescue"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/request"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_policy_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/iv_check2" />

    <ImageView
        android:id="@+id/iv_check3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="164dp"
        android:background="#FD000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/iv_check1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="24dp"
        android:background="#FD000000"
        app:layout_constraintBottom_toTopOf="@+id/iv_check2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tick" />

</androidx.constraintlayout.widget.ConstraintLayout>